--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -67,4 +67,5 @@ p {
 
 textarea {
     @extend p;
+    line-height: 1rem;
 }
